@startuml
'https://plantuml.com/class-diagram
' title High level class diagram of app inheritance
left to right direction
skinparam classAttributeIconSize 0
skinparam dpi 300
skinparam linetype poly

package "apps"{
    package common {
        abstract class BaseActivityTemplate
        abstract class BaseLoginActivity
        abstract class BaseRegisterActivity
    }


    package masvs_storage{
        class storage_menu <<Activity>>

        package maswe_0001{
            class MainActivity0001 <<Activity>>
            class RegisterActivity <<Activity>>
            class LoginActivity <<Activity>>
            class ProfileActivity <<Activity>>
        }
    }
}


' Usage
MainActivity0001 <--- storage_menu
RegisterActivity <-- MainActivity0001
LoginActivity <-- MainActivity0001
ProfileActivity <-- LoginActivity


' Inheritance
BaseActivityTemplate <|-- BaseRegisterActivity
BaseActivityTemplate <|-- BaseLoginActivity

BaseRegisterActivity <|-- RegisterActivity
BaseLoginActivity <|-- LoginActivity
BaseActivityTemplate <|---- storage_menu
BaseActivityTemplate <|----- MainActivity0001
BaseActivityTemplate <|--- ProfileActivity

@enduml